# ibom.ai

./: README.md  pyproject.toml  reference.txt  requirements.txt  server.py  server.sh  vercel.json
.github/workflows/: python-app.yml
api/: Dockerfile  main.py  requirements.txt
src/: app.py  main.py  models.py
src/api/: Dockerfile  api.py  tts.py  tts_api.py
src/frontend/static/css/: api.css  board.css  button.css  co.css  cuard.css  dash.css  dashboard.css  demo.css  drpn.css  exsent.css  ghost.css  ghost1.css  gpt.css  index.css  key.css  nav.css  popup.css  pre.css  profile.css  search.css  sign.css  spin.css  ss.css  style.css  suno.css  voice.css
src/frontend/static/js/: api.js  auth.js  avatar.js  board.js  button.js  demo.js  dynamic.js  edit.js  keyboard.js  keyz.js  message.js  nav.js  newform.js  password.js  pop.js  pre.js  profile.js  script.js  search.js  sign.js  speak.js  speaker.js  spnr.js  validate.js
src/frontend/template/: api.html  audio.html  co.html  dash.html  dashboard.html  delete.html  dict.html  ghost.html  gpt.html  index.html  keyboard.html  memrise.html  nav.html  ndex.html  pre.html  profile.html  sign.html  signin.html  speak.html  suno.html  write.html
src/utils/: base.py  model.py  results.py  search.py
src/utils/objects/: auth.json  dict5k_.json  encypt.txt  requirements.txt
