[tool.poetry]
name = "iko"
version = "0.0.1"
description = "Language Learning App"
authors = ["'aidyai' <'aidyosu553@gmail.com'>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
Jinja2 = "^3.1.3"
python-multipart = "^0.0.9"
requests = "^2.31.0"
firebase-admin = "^6.5.0"
firebase = "^4.0.1"
Pyrebase4 = "^4.7.1"
python-dotenv = "^1.0.1"
cryptography = "^42.0.5"
itsdangerous = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
