[tool.poetry]
name = "iko"
version = "0.0.1"
description = "Language Learning App"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
whitenoise = "^6.6.0"
fastapi = "^0.110.1"
Pyrebase4 = "^4.7.1"
requests = "^2.31.0"
uvicorn = "^0.29.0"
Jinja2 = "^3.1.3"
python-multipart = "^0.0.9"
firebase-admin = "^6.5.0"
firebase = "^4.0.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
